k8s/applications/production/config-service.yaml

apiVersion: apps/v1
kind: Deployment
metadata:
  name: zipbob-config-service
  labels:
    app: zipbob-config-service
spec:
  replicas: 1
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxSurge: 1
      maxUnavailable: 0
  selector:
    matchLabels:
      app: zipbob-config-service
  template:
    metadata:
      labels:
        app: zipbob-config-service
    spec:
      containers:
        - name: zipbob-config-service
          image: ghcr.io/kakao-tech-bootcamp-team2/zipbob-config-service:latest
          imagePullPolicy: Always
          ports:
            - containerPort: 8888
            - containerPort: 9888
          lifecycle:
            preStop:
              exec:
                command: ["sh", "-c", "sleep 5"]
          resources:
            requests:
              memory: "100Mi"    
              cpu: "100m"     
              ephemeral-storage: "2Gi"

---

apiVersion: v1
kind: Service
metadata:
  name: zipbob-config-service
  labels:
    app: zipbob-config-service
spec:
  type: ClusterIP
  selector:
    app: zipbob-config-service
  ports:
    - name: http
      protocol: TCP
      port: 8888
      targetPort: 8888
    - name: debug
      protocol: TCP
      port: 9888
      targetPort: 9888
