k8s/applications/production/edge-service.yaml

apiVersion: apps/v1
kind: Deployment
metadata:
  name: zipbob-edge-service
  labels:
    app: zipbob-edge-service
spec:
  replicas: 2
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxSurge: 1
      maxUnavailable: 1
  selector:
    matchLabels:
      app: zipbob-edge-service
  template:
    metadata:
      labels:
        app: zipbob-edge-service
    spec:
      containers:
        - name: zipbob-edge-service
          image: ghcr.io/kakao-tech-bootcamp-team2/zipbob-edge-service:77b373ddc6821cf55125b93adb1bc4f3529245d5
          imagePullPolicy: Always
          lifecycle:
            preStop:
              exec:
                command: [ "sh", "-c", "sleep 5" ]
          ports:
            - containerPort: 9000
            - containerPort: 8000
          resources:
            requests:
              memory: "100Mi"    
              cpu: "100m"     
              ephemeral-storage: "2Gi"

---

apiVersion: v1
kind: Service
metadata:
  name: zipbob-edge-service
  labels:
    app: zipbob-edge-service
spec:
  type: ClusterIP
  selector:
    app: zipbob-edge-service
  ports:
    - name: http
      protocol: TCP
      port: 80
      targetPort: 9000
    - name: debug
      protocol: TCP
      port: 8000
      targetPort: 8000
