k8s/applications/production/ingredients-manage-service.yaml

apiVersion: apps/v1
kind: Deployment
metadata:
  name: ingredients-manage-service
  labels:
    app: ingredients-manage-service
spec:
  replicas: 1
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxSurge: 1
      maxUnavailable: 1
  selector:
    matchLabels:
      app: ingredients-manage-service
  template:
    metadata:
      labels:
        app: ingredients-manage-service
    spec:
      containers:
        - name: ingredients-manage-service
          image: ghcr.io/kakao-tech-bootcamp-team2/ingredients-manage-service:46659781c7892e48e6062b5b5c4c64f955bfe787
          imagePullPolicy: Always
          lifecycle:
            preStop:
              exec:
                command: [ "sh", "-c", "sleep 5" ]
          ports:
            - containerPort: 9001
            - containerPort: 8001
          resources:
            requests:
              memory: "100Mi"    
              cpu: "100m"     
              ephemeral-storage: "2Gi"

---

apiVersion: v1
kind: Service
metadata:
  name: ingredients-manage-service
  labels:
    app: ingredients-manage-service
spec:
  type: LoadBalancer
  selector:
    app: ingredients-manage-service
  ports:
    - name: http
      protocol: TCP
      port: 9001
      targetPort: 9001
    - name: debug
      protocol: TCP
      port: 8001
      targetPort: 8001
