k8s/applications/production/recipe-review-service.yaml

apiVersion: apps/v1
kind: Deployment
metadata:
  name: recipe-review-service
  labels:
    app: recipe-review-service
spec:
  replicas: 1
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxSurge: 1
      maxUnavailable: 1
  selector:
    matchLabels:
      app: recipe-review-service
  template:
    metadata:
      labels:
        app: recipe-review-service
    spec:
      containers:
        - name: recipe-review-service
          image: ghcr.io/kakao-tech-bootcamp-team2/recipe-review-service:c5c7afe778f58d6c23180da2e8c32543b3da9035
          imagePullPolicy: Always
          lifecycle:
            preStop:
              exec:
                command: [ "sh", "-c", "sleep 5" ]
          ports:
            - containerPort: 9002
            - containerPort: 8002
          resources:
            requests:
              memory: "100Mi"    
              cpu: "100m"     
              ephemeral-storage: "2Gi"


---

apiVersion: v1
kind: Service
metadata:
  name: recipe-review-service
  labels:
    app: recipe-review-service
spec:
  type: LoadBalancer
  selector:
    app: recipe-review-service
  ports:
    - name: http
      protocol: TCP
      port: 9002
      targetPort: 9002
    - name: debug
      protocol: TCP
      port: 8001
      targetPort: 8002
