k8s/applications/production/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: zipbob-ingress
spec:
  ingressClassName: nginx
  tls:
  - hosts:
    - backend.zipbob.site
    secretName: backend-zipbob-tls
  rules:
  - host: backend.zipbob.site
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: zipbob-edge-service
            port:
              number: 80
